--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </div>
       <ul class="company-bullets">
         <li>Built features with Rails and JavaScript for multiple web-based client projects on a biweekly sprint basis</li>
-        <li>Reproduced and fixed several asynchronous and state mismanagement bugs in a complex mobile application, significantly improving the speed and stability of the project</li>
+        <li>Reproduced and fixed several asynchronous and state mismanagement bugs in a large Angular/Cordova application using the Chrome Javascript debugger</li>
         <li>Wrote SQL queries and Ruby scripts to fix thousands of invalid records in a legacy database, unblocking multiple related tasks</li>
       </ul>
 
