--- a/index.html
+++ b/index.html
@@ -70,6 +70,37 @@
 
     <section>
       <div class="section-title">Employment</div>
+      <div class="place-and-date">
+        <div class="place">
+          <div class="company">
+            <span class="company-name">Atlassian</span>
+            <span class="location">(San Francisco, CA)</span>
+          </div>
+          <div class="job-title">Software Engineer</div>
+        </div>
+        <div class="date">July 2019 - Present</div>
+      </div>
+      <ul class="company-bullets">
+        <li>Led a feature to add the tasks/checklist feature to the new <a href="https://confluence.atlassian.com/bitbucket/try-the-new-pull-request-experience-in-bitbucket-958455255.html" target="_blank">Bitbucket Pull Request UI</a>. This project required significant API changes to an internal React component used across the company and was one of the most requested features by users for the new experience. Its success allowed us to double the rollout of the new UI in a short amount of time</li>
+        <li>Worked heavily in Bitbucket's <a href="https://developer.atlassian.com/bitbucket/api/2/reference/resource/repositories/%7Bworkspace%7D/%7Brepo_slug%7D/diff/%7Bspec%7D">public 2.0 Repository Diff API</a> to improve performance and reliability. Notable changes include handling of large files and preventing them from causing the API to timeout and adding support for Diffs with file names that have special encoding/escaping</li>
+        <li>Frequently contributed to Bitbucket's internal Python library that is used for interacting with Git at a low level. Main focus was on complex bug fixes that targeted inconsistencies in error handling and unexpected behavior due to NFS</li>
+      </ul>
+
+      <div class="place-and-date">
+        <div class="place">
+          <div class="company">
+            <span class="company-name">Atlassian</span>
+            <span class="location">(San Francisco, CA)</span>
+          </div>
+          <div class="job-title">Software Engineering Intern</div>
+        </div>
+        <div class="date">May 2018 - June 2019</div>
+      </div>
+      <ul class="company-bullets">
+        <li>Owned and shipped the conversion of Bitbucket's Repository Branches page to a React-based SPA, improving the page performance and experience for 200,000 daily users</li>
+        <li>Led a team of contractors to convert additional pages on Bitbucket to the React SPA, including the Commit List, Pull Request List, and Repository List - improving performance and user experience to some of the most frequently visisted pages on the site</li>
+        <li>Developed several new internal APIs in the Python/Django backend to meet the technical and performance requirements of the React transition</li>
+      </ul>
 
       <div class="place-and-date">
         <div class="place">
@@ -86,53 +117,6 @@
         <li>Built a create-react-app like tool to generate domain specific React components for things such as build status pages and device creation forms, allowing for quicker development and more consistent code</li>
         <li>Wrote tutorial and example based documentation on the above project, allowing those unfamiliar with React to be productive when adding and editing features</li>
       </ul>
-
-      <div class="place-and-date">
-        <div class="place">
-          <div class="company">
-            <span class="company-name">Infuse</span>
-            <span class="location">(San Francisco, CA)</span>
-          </div>
-          <div class="job-title">Software Engineering Intern</div>
-        </div>
-        <div class="date">March - August 2016</div>
-      </div>
-      <ul class="company-bullets">
-        <li>Built features with Rails and JavaScript for multiple web-based client projects on a biweekly sprint basis</li>
-        <li>Reproduced and fixed several asynchronous and state mismanagement bugs in a large Angular/Cordova application using the Chrome Javascript debugger</li>
-        <li>Wrote SQL queries and Ruby scripts to fix thousands of invalid records in a legacy database, unblocking multiple related tasks</li>
-      </ul>
-
-      <div class="place-and-date">
-        <div class="place">
-          <div class="company">
-            <span class="company-name">Lampros Labs</span>
-            <span class="location">(Cincinnati, OH)</span>
-          </div>
-          <div class="job-title">Web Development Intern</div>
-        </div>
-        <div class="date">June - December 2015</div>
-      </div>
-      <ul class="company-bullets">
-        <li>Worked primarily with Laravel, Symfony, and Angular 2 frameworks to develop features for small and medium sized projects</li>
-        <li>Frequently met with clients to understand project expectations, provide time estimates, and demo working features</li>
-      </ul>
-
-      <div class="place-and-date">
-        <div class="place">
-          <div class="company">
-            <span class="company-name">KnowledgeWorks Foundation</span>
-            <span class="location">(Cincinnati, OH)</span>
-          </div>
-          <div class="job-title">Web Development Intern</div>
-        </div>
-        <div class="date">June 2014 - December 2015</div>
-      </div>
-      <ul class="company-bullets">
-        <li>Designed and implemented a custom chart builder with an excel-like data entry UI and a reactive chart display using jQuery, Symfony, Highcharts, and Datatables</li>
-        <li>Wrote a small server using Node.js and PhantomJS to convert charts rendered as SVGs into PNGs, which was significantly faster than using the existing PHP server</li>
-      </ul>
-    </section>
 
     <section>
       <div class="section-title">Personal Projects</div>
