Fix dates getting cut off

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
           </div>
           <div class="job-title">Software Engineering Intern</div>
         </div>
-        <div class="date">May - August 2018
-        <div class="date">September - June 2019 (part-time)</div>
+        <div class="date">
+          May - August 2018
         </div>
       </div>
       <ul class="company-bullets">
@@ -131,7 +131,7 @@
               <a href="https://github.com/hilariousatlantic/mu-scheduler">(view on GitHub)</a>
             </span>
           </span>
-          <span class="personal-project-year">2017</span>
+          <span class="date">2017</span>
         </div>
         <ul>
           <li>Web application that generates class schedules and displays historical GPA data from a list of courses at Miami University</li>
